[tool.poetry]
name = "starai"
version = "0.1.0"
description = "StarAI funn"
authors = ["nayyarv <nayyarv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.10.1"
torch = "0.4.1"
gym = "^0.10.5"
numpy = "^1"
scipy = "^1"
attrs = "^18"
click = "^7.0"
matplotlib = "^3.0"
pyvirtualdisplay = "^0.2.1"
ipython = "^7.0"
pygame = "^1.9"
moviepy = "^0.2.3"
theano = "^1.0"
keras = "^2.2"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.8"
pip = "*"

[[tool.poetry.source]]
name="rlenvs"
url="https://github.com/star-ai/rl-environments.git"

[[tool.poetry.source]]
name="gym_bandits"
url="https://github.com/JKCooper2/gym-bandits.git"
